--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,44 @@
-//add everything here
+plugins {
+    id 'java-library'
+    id 'maven-publish'
+}
+
+group = 'com.example'
+version = '1.3.5'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.10'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.example'
+            artifactId = 'utils'
+            version = '1.3.5'
+
+            from components.java
+        }
+    }
+}
+
+jar {
+    manifest {
+        attributes(
+                'Implementation-Title': 'Utils Library',
+                'Implementation-Version': version
+        )
+    }
+}
 
 test {
     useJUnitPlatform()
